syntax = "proto3";

message ProtoCertificate {
  string version = 1;
  int32 serial_number = 2;
  string signature_value = 3;
  string issuer = 4;
  int64 valid_not_after = 5;
  string holder = 6;
  string public_key = 7;
  int32 history_height = 8;
  int32 block_pre_height = 9; // op_type
  string contract_url = 10;
}